--- a/enquiry.html
+++ b/enquiry.html
@@ -44,7 +44,7 @@
 
                             </div>
                             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-4">
-                                <h6 class="header-top">
+                                <h6 class="header-top mail-top">
                                     <i class="fas fa-envelope-open-text"></i>
                                     <a href="#" class="social-linking">&nbsp; drchiits@rediffmail.com</a>
                                 </h6>
@@ -63,7 +63,7 @@
                             </button>
 
                                 <div class="collapse navbar-collapse " id="navbarSupportedContent ">
-                                    <ul class="navbar-nav ml-auto px-3 py-4 py-md-0 ">
+                                    <ul class="navbar-nav ml-auto px-0 py-4 py-md-0 ">
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                             <a class="nav-link" href="index2.html">Home</a>
                                         </li>
@@ -142,15 +142,24 @@
                             <div class="col-lg-6 ">
                                 <div class="contact-box ">
                                     <!-- <h5 class="font-weight-light mt-2 ">Fill Form For Your Medical Billing Requirement</h5> -->
-                                    <form class="needs-validation " id="contact-form " role=“form” novalidate=“true” method="POST " action="./php/contact.php ">
+                                    <form id="contact-form " method="POST" action=" ">
                                         <div class="messages "></div>
                                         <div class="row ">
-                                            <div class="col-lg-12 ">
+                                            <div class="col-lg-6">
                                                 <div class="form-group mt-2 ">
-                                                    <label>Name</label>
+                                                    <label>Name <span class="text-danger font-weight-medium">*</span></label>
                                                     <input class="form-control " type="text " name="name " id="name " placeholder="Name " value=" " required=" ">
                                                     <div class="invalid-feedback ">
                                                         Valid Name is required.
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="form-group mt-2 ">
+                                                    <label>Age <span class="text-danger font-weight-medium">*</span></label>
+                                                    <input class="form-control " type="text " name="age" id="age" placeholder="age" value=" " required=" ">
+                                                    <div class="invalid-feedback ">
+                                                        Valid Age is required.
                                                     </div>
                                                 </div>
                                             </div>
@@ -159,7 +168,7 @@
                                             <div class="col-lg-6 ">
                                                 <div class="form-group mt-2 ">
                                                     <label>Email</label>
-                                                    <input class="form-control " value=" " name="email " id="email " type="email " placeholder="Email" required=" ">
+                                                    <input class="form-control " value=" " name="mail " id="mail " type="mail " placeholder="Email" required=" ">
                                                     <div class="invalid-feedback ">
                                                         Please enter a valid email address.
                                                     </div>
@@ -168,10 +177,10 @@
 
                                             <div class="col-lg-6 ">
                                                 <div class="form-group mt-2 " for="phone ">
-                                                    <label>Phone</label>
-                                                    <input class="form-control " type="text " name="subject " id="subject " placeholder="enter your number " value=" " required=" ">
+                                                    <label>Phone <span class="text-danger font-weight-medium">*</span></label>
+                                                    <input class="form-control " type="text " name="contact" id="contact " placeholder="enter your number " value=" " required=" ">
                                                     <div class="invalid-feedback ">
-                                                        Please enter valid subject.
+                                                        Please enter valid number.
                                                     </div>
                                                 </div>
                                             </div>
@@ -181,8 +190,8 @@
                                         <div class="row ">
                                             <div class="col-lg-6 ">
                                                 <div class="form-group" for="subject ">
-                                                    <label>Address</label>
-                                                    <input class="form-control " type="text " name="subject " id="subject " placeholder="Subject " value=" " required=" ">
+                                                    <label>Address <span class="text-danger font-weight-medium">*</span></label>
+                                                    <input class="form-control " type="text " name="subjects" id="subjects" placeholder="Subject " value=" " required=" ">
                                                     <div class="invalid-feedback ">
                                                         Please enter valid subject.
                                                     </div>
@@ -190,8 +199,8 @@
                                             </div>
                                             <div class="col-lg-6 ">
                                                 <div class="form-group " for="looking_for ">
-                                                    <label>Procedure Name</label>
-                                                    <select class="form-control " name="looking_for " id="looking_for " required>
+                                                    <label>Procedure Name <span class="text-danger font-weight-medium">*</span></label>
+                                                    <select class="form-control " name="choose " id="choose " required>
                                                         <option value="procedure name"> choose..</option>
                                                         <option value="procedure name"> Cosmetic Treatments</option>
                                                     <option value="what are looking for">Moles And Skin</option>                                                                     
@@ -208,15 +217,15 @@
                                         <div class="row ">
                                             <div class="col-lg-12 ">
                                                 <div class="form-group mt-2 ">
-                                                    <label>Message</label>
-                                                    <textarea class="form-control " rows="3 " name="summary " id="summary " placeholder=" " values=" " required=" "></textarea>
+                                                    <label>Message <span class="text-danger font-weight-medium">*</span></label>
+                                                    <textarea class="form-control " rows="3 " name="summarys" id="summarys" placeholder=" " values=" " required=" "></textarea>
                                                     <div class="invalid-feedback ">
                                                         Please enter a message in the textarea.
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <button class="btn btn-blue btn-sm m-auto " id="contact_form_submit " name="contact_submit " type="submit ">Submit</button>
+                                        <button class="btn btn-info mt-2" id="contact_form_submit " name="contact_submit " type="submit ">Submit</button>
                                 </div>
                                 </form>
                             </div>
@@ -247,6 +256,7 @@
                                     <a href="#" class="icon-button instagram" title="Instagram"><i class="fab fa-instagram" ></i><span></span></a>
                                     <a href="#" class="icon-button linkedin" title="LinkedIn"><i class="fab fa-linkedin-in" ></i><span></span></a>
                                     <a href="#" class="icon-button google-plus" title="Google"><i class="fab fa-google"></i><span></span></a>
+                                    <a href="https://youtu.be/NOXbLu5ltdw" class="icon-button youtube" title="Youtube"><i class="fab fa-youtube"></i><span></span></a>
                                 </div>
                             </div>
                             <!-- Ends: .footer-widget -->
@@ -300,8 +310,7 @@
             <div class="mini-footer ">
                 <div class="container ">
                     <div class="copyright-text wow fadeInDown" data-wow-delay="0.5s " style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">
-                        <p>© 2020 . All rights reserved.
-                        </p>
+                        <p class="love">Made with <i class="fas fa-heart"></i> .<a href="http://www.kanvan.in/" class="text-footer" target="_blank" title="Kanvan Business Solution"> Designed by Kanvan Business Solution</a></p>
                         <p class="">For emergency cases &nbsp; <i class="fas fa-phone-alt"></i> <a href="#" class="text-footer" target="_blank"> 91 96257 58634</a></p>
                     </div>
                 </div>
