--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
 
                             </div>
                             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-4">
-                                <h6 class="header-top">
+                                <h6 class="header-top mail-top">
                                     <i class="fas fa-envelope-open-text"></i>
                                     <a href="#" class="social-linking">&nbsp; &nbsp; &nbsp; drchiits@rediffmail.com</a>
                                 </h6>
@@ -63,7 +63,7 @@
                             </button>
 
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav ml-auto px-3 py-4 py-md-0">
+                                    <ul class="navbar-nav ml-auto px-0 py-4 py-md-0">
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                             <a class="nav-link" href="index2.html">Home</a>
                                         </li>
@@ -210,6 +210,7 @@
                                     <a href="#" class="icon-button instagram" title="Instagram"><i class="fab fa-instagram" ></i><span></span></a>
                                     <a href="#" class="icon-button linkedin" title="LinkedIn"><i class="fab fa-linkedin-in" ></i><span></span></a>
                                     <a href="#" class="icon-button google-plus" title="Google"><i class="fab fa-google"></i><span></span></a>
+                                    <a href="https://youtu.be/NOXbLu5ltdw" class="icon-button youtube" title="Youtube"><i class="fab fa-youtube"></i><span></span></a>
                                 </div>
                             </div>
                             <!-- Ends: .footer-widget -->
@@ -263,8 +264,7 @@
             <div class="mini-footer ">
                 <div class="container ">
                     <div class="copyright-text wow fadeInDown" data-wow-delay="0.5s " style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">
-                        <p>© 2020 . All rights reserved.
-                        </p>
+                        <p class="love">Made with <i class="fas fa-heart"></i> .<a href="http://www.kanvan.in/" class="text-footer" target="_blank" title="Kanvan Business Solution"> Designed by Kanvan Business Solution</a></p>
                         <p class="">For emergency cases &nbsp; <i class="fas fa-phone-alt"></i> <a href="#" class="text-footer" target="_blank"> 91 96257 58634</a></p>
                     </div>
                 </div>
