--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
 
                             </div>
                             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-4">
-                                <h6 class="header-top">
+                                <h6 class="header-top mail-top">
                                     <i class="fas fa-envelope-open-text"></i>
                                     <a href="#" class="social-linking">&nbsp; info@dermaaesthetic.org</a>
                                 </h6>
@@ -63,7 +63,7 @@
                             </button>
 
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav ml-auto px-3 py-4 py-md-0">
+                                    <ul class="navbar-nav ml-auto px-0 py-4 py-md-0">
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                             <a class="nav-link" href="index2.html">Home</a>
                                         </li>
@@ -514,6 +514,7 @@
                                     <a href="#" class="icon-button instagram" title="Instagram"><i class="fab fa-instagram" ></i><span></span></a>
                                     <a href="#" class="icon-button linkedin" title="LinkedIn"><i class="fab fa-linkedin-in" ></i><span></span></a>
                                     <a href="#" class="icon-button skype" title="Skype"><i class="fab fa-skype"></i><span></span></a>
+                                    <a href="https://youtu.be/NOXbLu5ltdw" class="icon-button youtube" title="Youtube"><i class="fab fa-youtube"></i><span></span></a>
                                 </div>
 
                                 <!-- Ends: .footer-widget -->
